--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,10 @@ h1 {
   gap: 15px;
   margin-bottom: 30px;
   justify-content: center;
+  @media(max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .view-container {
